# Etude

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TRAINING_STORYLINE.md  pyproject.toml
data/climbmix/: merge.py  prepare.py  prepare.sh
data/fineweb-edu/: prepare.py  prepare.sh
data/nemotron-cascade-sft-stage-2/: prepare.py  prepare.sh  prepare_litgpt_instruction_following.py
data/rust/: prepare.py  prepare.sh  prepare_litgpt_litdata.py  prepare_txt.py  prepare_txt.sh
data/strandset-rust/: prepare_litgpt_strandset_rust.py
etude/: checkpoint_manager.py  common.py  dataloader.py  dataset.py  deltanet.py  engine.py  flash_attention.py  fp8.py  gpt.py  hf_flash_attention.py  optim.py  qwen3_5.py  qwen_data_module.py  qwen_module.py  report.py  sft_dataloader.py  tokenizer.py  ui.html
runs/: backup_base_checkpoints.sh  chat_litgpt_export.sh  chat_strandset_final_model.sh  convert_litgpt_to_hf.sh  d24_chat_sft.slurm  d24_h100_resume.slurm  d24_h200_resume.slurm  d24_rust_resume.slurm  litgpt_qwen3_nemotron_instruction_following_sft.slurm  litgpt_qwen3_rust_pretrain.sh  litgpt_qwen3_rust_resume.slurm  litgpt_qwen3_strandset_rust_sft.slurm  miniseries.sh  nemotron_prepare.slurm  prepare_litgpt_nemotron_instruction_following.sh  prepare_litgpt_strandset_rust.sh  qwen_base_train.slurm  qwen_base_train_h200.slurm  runcpu.sh  scaling_laws.sh  speedrun.sh  train.slurm  twostage.sh  upload_hf_model.sh  upload_hf_model_pth.sh  upload_hf_transformers_model.sh  watch_slurm_time_limit.sh
scripts/: base_eval.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_transformers_from_litgpt.py  chat_web.py  litgpt_infer_checkpoint.py  litgpt_qwen3_rust_pretrain.py  qwen_base_train.py  tok_eval.py  tok_train.py  tok_viz.py
tasks/: customjson.py  humaneval.py  nemotron_cascade_sft_stage2.py  spellingbee.py
tests/: test_attention_fallback.py  test_engine.py  test_nemotron_cascade_sft_stage2.py  test_sft_dataloader.py  test_tokenizer_chat_rendering.py
